Animation for price cards all set and done

--- a/index.html
+++ b/index.html
@@ -282,26 +282,30 @@
           <div class="col-md-12 wow fadeInUp slow">
             <h2 class="text-center text-white font-weight-bold">Our Pricing</h2>
           </div>
-          <div class="mx-auto mb-5 pt-2 pinky-border d-block"></div>
+          <div class="mx-auto wow fadeInLeft mb-5 pt-2 pinky-border d-block"></div>
           <div class="w-100 d-block"></div>
 
           <div class="col-md-4 mb-3">
-            <div class="card card-body px-0 item-list bg-white">
+            <div class="card wow fadeInUp card-body px-0 item-list bg-white">
               <div class="row mx-auto mb-2 tick-blue-text d-flex justify-content-center">
                 <h6 class="font-weight-bold pinky-text mb-0">Starter Plan</h6>
                 <div class="w-100"></div>
-                <h3 class="tick-blue-text font-weight-bold mt-0"><sup class="font-weight-normal">$</sup>35<sub class="text-muted font-weight-normal">/monthly</sub></h3>
+                <h3 class="tick-blue-text font-weight-bold mt-0">
+                  <sup class="font-weight-normal">$</sup>
+                  35
+                  <sub class="text-muted font-weight-normal">/monthly</sub>
+                </h3>
                 <div class="w-100"></div>
                 <hr class="pinky-border2 mb-5">
               </div>
 
-              <div class="row mx-auto w-100 mt-0 d-flex justify-content-center">
+              <div class="row mx-auto w-100 mt-0 d-flex justify-content-around">
                 <!-- <h6 class="h6reponsive font-weight-bold tick-blue-text">Property Management</h6> -->
-                <ul class="list-group list-group-flush bg-transparent mb-5">
-                  <li class="list-group-item d-flex bg-transparent text-muted font-weight-light text-center justify-content-between align-items-center">Up to 10 users monthly</li>
-                  <li class="list-group-item d-flex bg-transparent text-muted font-weight-light text-center justify-content-between align-items-center">Unlimited Updates</li>
-                  <li class="list-group-item d-flex bg-transparent text-muted font-weight-light text-center justify-content-between align-items-center">Free host &nbsp; domain</li>
-                  <li class="list-group-item d-flex bg-transparent text-muted font-weight-light text-center justify-content-between align-items-center">Support 24 / 7</li>
+                <ul class="list-group list-group-flush bg-transparent mb-5 w-75">
+                  <li class="list-group-item d-flex bg-transparent text-muted font-weight-light text-center justify-content-center align-items-center">Up to 10 users monthly</li>
+                  <li class="list-group-item d-flex bg-transparent text-muted font-weight-light text-center justify-content-center align-items-center">Unlimited Updates</li>
+                  <li class="list-group-item d-flex bg-transparent text-muted font-weight-light text-center justify-content-center align-items-center">Free host &nbsp; domain</li>
+                  <li class="list-group-item d-flex bg-transparent text-muted font-weight-light text-center justify-content-center align-items-center">Support 24 / 7</li>
                 </ul> 
                 <button type="button" class="btn mr-3 rounded-0 default-bg-color">Select Plan</button>
               </div>
@@ -309,7 +313,7 @@
           </div>
 
           <div class="col-md-4 mb-3">
-            <div class="card card-body px-0 item-list-mid default-bg-color">
+            <div class="card wow fadeInUp slow card-body px-0 item-list-mid default-bg-color">
               <div class="row mx-auto mb-2 white-text d-flex justify-content-center">
                 <h6 class="font-weight-bold white-text mb-0">Gold Plan</h6>
                 <div class="w-100"></div>
@@ -340,7 +344,7 @@
           </div>
 
           <div class="col-md-4 mb-3">
-            <div class="card card-body px-0 item-list bg-white">
+            <div class="card wow fadeInUp card-body px-0 item-list bg-white">
               <div class="row mx-auto mb-2 tick-blue-text d-flex justify-content-center">
                 <h6 class="font-weight-bold pinky-text mb-0">Silver Plan</h6>
                 <div class="w-100"></div>
