--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@
     </nav>
     <!--/.Navbar-->
     <!-- Main Navigation bar -->
-    <div class="view intro-2" style="background: url('images/1-3.jpg')no-repeat center center; background-size: cover;">
+    <div class="view intro-2" style="background: url('images/DSC_0445.JPG')no-repeat center center fixed; background-size: cover; ">
       <div class="full-bg-img">
         <div class="mask rgba-indigo-slight flex-center">
           <div class="container black-text">
             <div class="col-md-8">
-              <h1 class="font-weight-bold wow fadeInUp slow tick-blue-text text-uppercase">Save <span class="pinky-text">time</span></h1>
-              <h1 class="font-weight-bold wow fadeInUp slow tick-blue-text text-uppercase">Save <span class="pinky-text">Money</span></h1>
-              <h1 class="font-weight-bold wow fadeInUp slow  text-uppercase"><span class="pinky-text">Grow &amp; Success</span></h1>
+              <h1 class="font-weight-bold wow fadeInUp slow tick-blue-text text-uppercase">Save <span class="text-white">time</span></h1>
+              <h1 class="font-weight-bold wow fadeInUp slow pinky-text text-uppercase">Save <span class="text-white">Money</span></h1>
+              <h1 class="font-weight-bold wow fadeInUp slow  text-uppercase tick-blue-text"><span class="pinky-text">Grow &amp;</span> Success</h1>
               <br>
                 <button type="button" class="btn wow fadeInUpBig  mr-3 rounded-0 pinky-button">Our Company</button>
                 <button type="button" class="btn wow fadeInUpBig  rounded-0 default-bg-color">Our Services</button>
@@ -373,77 +373,92 @@
       <div class="container">
         <div class="row py-4">
           <div class="row">
-            <div class="col-md-8 mx-auto py-4">
-              <h1 class="h1responsive mb-3 tick-blue-text text-center font-weight-bold">Latest News</h1>
+            <div class="col-md-8 mx-auto py-4 wow fadeInUp">
+              <h1 class="h1-responsive mb-3 tick-blue-text text-center font-weight-bold">Latest News</h1>
+              <div class="mx-auto wow fadeInLeft mb-5 pt-2 pinky-border w-25"></div>
+              <div class="w-100 d-block"></div>
             </div>
             <div class="row">
-              <div class="col-md-6 col-lg-4">
-                <div class="mb-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
-                  <img src="images/28166585_1821180634600940_1020049624458377498_n.jpg" class="img-fluid" alt="Man with backpack"    
-                      class="d-block w-100">
-                  <div class="px-2 py-2">
-                    <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">
-                      Travel
-                    </p>
-                    <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
-                      Playing around
-                    </h1>
+              <div class="col-md-11 mx-auto">
+                <div class="row">
+                  <div class="col-md-6 col-lg-4 wow fadeInUp slow">
+                    <div class="mb-3 mx-auto news-card p-relative bg-white shadow-1 blue-hover" style="width: 100%; overflow: hidden; border-radius: 1px;">
+                      <img src="images/28166585_1821180634600940_1020049624458377498_n.jpg" class="img-fluid" alt="Man with backpack"    
+                          class="d-block w-100">
+                      <div class="px-3 py-2">
+                        <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">
+                          Travel
+                        </p>
+                        <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
+                          Playing around
+                        </h1>
 
-                    <p class="mb-1">
-                      Summer is coming to a close just around the corner. But it's not too late to squeeze in &hellip;
-                    </p>
+                        <p class="mb-1">
+                          Summer is coming to a close just around the corner. But it's not too late to &hellip;
+                        </p>
+                      </div>
+                      <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-3 mb-2 text-center styled-link">
+                        Read More
+                      </a>
+                    </div>
                   </div>
-                  <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
-                    Read More
-                  </a>
-                </div>
-              </div>
 
-              <div class="col-md-6 col-lg-4">
-                <div class="mb-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
-                  <img src="images/Meeting.jpg" class="img-fluid" alt="Man with backpack"    
-                      class="d-block w-100">
-                  <div class="px-2 py-2">
-                    <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">
-                      Travel
-                    </p>
-                    <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
-                      Planning your final summer trip
-                    </h1>
+                  <div class="col-md-6 col-lg-4 wow fadeInUp slow">
+                    <div class="mb-3 news-card mx-auto px-2 p-relative bg-white shadow-1 blue-hover" style="width: 100%; overflow: hidden; border-radius: 1px;">
+                      <img src="images/Meeting.jpg" class="img-fluid" alt="Man with backpack"    
+                          class="d-block w-100">
+                      <div class="px-3 py-2">
+                        <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">
+                          Travel
+                        </p>
+                        <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
+                          Planning summer
+                        </h1>
 
-                    <p class="mb-1">
-                      Summer is coming to a close just around the corner. But it's not too late to squeeze in another weekend trip &hellip;
-                    </p>
+                        <p class="mb-1">
+                          Summer is coming to a close just around the corner. But it's not too late to squeeze in another weekend trip &hellip;
+                        </p>
+                      </div>
+                      <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-3 mb-2 text-center styled-link">
+                        Read More
+                      </a>
+                    </div>
                   </div>
-                  <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
-                    Read More
-                  </a>
-                </div>
-              </div>
 
-              <div class="col-md-6 col-lg-4">
-                <div class="mb-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
-                  <img src="images/edited/DSC_0607.JPG" class="img-fluid" alt="Man with backpack"    
-                      class="d-block w-100">
-                  <div class="px-2 py-2">
-                    <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">
-                      Travel
-                    </p>
-                    <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
-                      Planning your final summer trip
-                    </h1>
+                  <div class="col-md-6 col-lg-4 wow fadeInUp slow">
+                    <div class="mb-3 news-card mx-auto px-2 p-relative bg-white shadow-1 blue-hover" style="width: 100%; overflow: hidden; border-radius: 1px;">
+                      <img src="images/edited/DSC_0607.JPG" class="img-fluid" alt="Man with backpack"    
+                          class="d-block w-100">
+                      <div class="px-3 py-2">
+                        <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">
+                          Travel
+                        </p>
+                        <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
+                          Planning your final summer trip
+                        </h1>
 
-                    <p class="mb-1">
-                      Summer is coming to a close just around the corner. But it's not too late to squeeze in another weekend trip &hellip;
-                    </p>
+                        <p class="mb-1">
+                          Summer is coming to a close just around the corner. But it's not too late to squeeze in another weekend trip &hellip;
+                        </p>
+                      </div>
+                      <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-3 mb-2 text-center styled-link">
+                        Read More
+                      </a>
+                    </div>
                   </div>
-                  <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
-                    Read More
-                  </a>
                 </div>
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact-section py-5">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-6 py-5 bg-success"></div>
+          <div class="col-md-6 py-5 bg-danger"></div>
         </div>
       </div>
     </section>
