Done with the google map for address location

--- a/index.html
+++ b/index.html
@@ -457,8 +457,15 @@
     <section class="contact-section py-5">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-6 py-5 bg-success"></div>
-          <div class="col-md-6 py-5 bg-danger"></div>
+          <div class="col-md-6 py-5 contact-left-bg bg-success d-flex justify-content-center align-content-center">
+            <div class="col-md-6 text-center py-3 rgba-stylish-slight z-indepth-3 set-border">
+              <i class="material-icons pinky-text">location_on</i>
+              <h3 class="font-weight-bold h4-responsive tick-blue-text">Uplift Hub, Adajcent Admin Block, Federal Polytechnic Bauchi.</h3>
+            </div>
+          </div>
+          <div class="col-md-6 py-5 contact-right-bg">
+            
+          </div>
         </div>
       </div>
     </section>
