Contact form all set and ready for backend

--- a/index.html
+++ b/index.html
@@ -457,14 +457,57 @@
     <section class="contact-section py-5">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-6 py-5 contact-left-bg bg-success d-flex justify-content-center align-content-center">
-            <div class="col-md-6 text-center py-3 rgba-stylish-slight z-indepth-3 set-border">
+          <div class="col-md-6 py-5 contact-left-bg d-flex justify-content-center align-content-center">
+            <div class="col-md-6 text-center justify-content-center align-self-center py-3 rgba-white-light z-depth-5 set-border">
               <i class="material-icons pinky-text">location_on</i>
               <h3 class="font-weight-bold h4-responsive tick-blue-text">Uplift Hub, Adajcent Admin Block, Federal Polytechnic Bauchi.</h3>
             </div>
           </div>
           <div class="col-md-6 py-5 contact-right-bg">
-            
+            <div class="row mx-auto">
+              <div class="col-md-8 py-3 offset-sm-0 offset-md-1">
+                <h1 class="h1-responsive wow fadeInUp slow pinky-text mb-3 font-weight-bold">Request <span class="text-white">a call back.</span></h1>
+                <p class="testimonail text-white">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti odio tempora mollitia quas minima sapiente nam, ipsa id laborum perferendis illum iste modi laudantium magni, architecto ipsum quibusdam debitis ratione.
+                </p>
+                <div class="form-section py-3 my-3 ">
+                  <h6 class="h6-reponsive text-uppercase font-weight-bold text-white">i would like to discuss</h6>
+                  <form action="#0">
+                    <div class="form-row mt-2">
+                      <div class="col">
+                        <!-- Branch name -->
+                        <div class="md-form mb-3 mt-1">
+                          <input type="text" id="materialRegisterFormBranch" class="form-control">
+                          <label for="materialRegisterFormBranch">How can we help</label>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <!-- Role -->
+                        <div class="md-form mb-3 mt-1">
+                          <input type="text" id="materialRegisterFormPhone" class="form-control">
+                          <label for="materialRegisterFormPhone">Phone Number</label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="form-row mt-1">
+                      <div class="col">
+                        <!-- Branch name -->
+                        <div class="md-form mb-3 mt-1">
+                          <input type="text" id="materialRegisterFormName" class="form-control">
+                          <label for="materialRegisterFormName">Your Name</label>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <!-- Role -->
+                        <div class="md-form mb-3 mt-1">
+                          <button type="submit" class="btn btn-block rounded-0 pinky-button">Submitt &nbsp; <i class="fa fa-forward"></i></button>
+                        </div>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
