Updated index.html title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Godson C. Jnr Design Proposal</title>
+  <title>Godson C. Jnr DevC Bauchi Design Proposal</title>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="font/font-awesome/css/font-awesome.min.css">
   <!-- Bootstrap core CSS -->
